# cpp20

./: AsciiChart.cpp  BaseN.cpp  BaseN.h  Benchmark.cpp  Benchmark.h  BigDecimal.cpp  BigDecimal.h  BigInt.h  BigInteger.cpp  BigInteger.h  Doxyfile  Generator.h  Generator_Test.cpp  Hashtable.cpp  Hashtable.h  Lexer.cpp  Parser.cpp  Parser.h  README.md  Source.cpp  StringStream.cpp  Token.h  UInt128.cpp  UInt128.h  aligned.cpp  ascii.htm  ascii.html  async.cpp  bible_statistics.cpp  bible_statistics.h  bible_words.xlsx  concepts.cpp  concepts.h  cpp20.sln  cpp20.vcxproj  cpp20.vcxproj.filters  dc.cpp  exceptions.h  main.cpp  main.h  (+23 more)
Benchmark/: Benchmark.cpp  Benchmark.h  Benchmark.sln  Benchmark.vcxproj  Benchmark.vcxproj.filters  CMakeLists (2).txt  CMakeLists.txt  Generator.h  main.cpp
Benchmark/Benchmark/: Benchmark.h  CMakeLists.txt  main.cpp
Benchmark/Threads/: CMakeLists.txt  async.cpp
Benchmark/containers/: CMakeLists.txt  parse_main.cpp  tuple1.cpp
Threads/: CMakeLists.txt  Generator.h  Threads.vcxproj  Threads.vcxproj.filters  async.cpp
containers/: CMakeLists.txt  containers.sln  containers.vcxproj  containers.vcxproj.filters  parse_main.cpp
cpp20Tests/Cpp20Tests/: Cpp20Tests.cpp  Cpp20Tests.vcxproj  Cpp20Tests.vcxproj.filters  pch.h
docs/html/: _ascii_chart_8cpp.html  _ascii_chart_8cpp.js  _ascii_chart_8cpp_source.html  _base_n_8cpp.html  _base_n_8cpp.js  _base_n_8cpp_source.html  _base_n_8h.html  _base_n_8h.js  _base_n_8h_source.html  _benchmark_2_generator_8h.html  _benchmark_2_generator_8h.js  (+268 more)
lib/: zlibstatic.lib  zlibstaticd.lib
(+278 files in other folders)
